--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ contact:
   email: firstname.lastname@uit.no
   name: Firstname Lastname
 
-url: "http://uit-inf-XXX-Y20YY.github.io/"
+urlx: "http://uit-inf-XXX-Y20YY.github.io/"
 
 # you don't need to adapt the settings below
 baseurl: ""
